objects/Month_Territory_Target__c.object
<CustomObject>
    <label>Month Territory Target</label>
    <nameField>
        <displayFormat>MTTN-{0000}</displayFormat>
        <label>Month Territory Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Month Territory Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>MTT__c</fullName>
        <formula>Territory_Name__c &amp;
&quot;-&quot; &amp;
TEXT( Year__c ) &amp; 
&quot;-&quot; &amp;
RIGHT(TEXT(Month__c), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01-Jan</fullName>
                </value>
                <value>
                    <fullName>02-Feb</fullName>
                </value>
                <value>
                    <fullName>03-Mar</fullName>
                </value>
                <value>
                    <fullName>04-Apr</fullName>
                </value>
                <value>
                    <fullName>05-May</fullName>
                </value>
                <value>
                    <fullName>06-Jun</fullName>
                </value>
                <value>
                    <fullName>07-Jul</fullName>
                </value>
                <value>
                    <fullName>08-Aug</fullName>
                </value>
                <value>
                    <fullName>09-Sep</fullName>
                </value>
                <value>
                    <fullName>10-Oct</fullName>
                </value>
                <value>
                    <fullName>11-Nov</fullName>
                </value>
                <value>
                    <fullName>12-Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>int_Month__c</fullName>
        <formula>TRIM(LEFT(TEXT(Month__c), 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>int_Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Base_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Won_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Won Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_Field__c</fullName>
        <externalId>true</externalId>
        <label>Unique Field</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Commit_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Commit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stretch_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stretch Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <formula>Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dollar_Win_Rate__c</fullName>
        <formula>IF(( Closed_Won_Opportunities__c = 0), 0, ( Won_Revenue__c / ( Won_Revenue__c + Closed_Lost_Amount__c ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Dollar Win Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Territory_Level_1__c</fullName>
        <label>Territory Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PerkinElmer Inc.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Lost_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Closed Lost Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Territory_Level_10__c</fullName>
        <label>Territory Level 10</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Territory_Level_9__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Philippines EH Team Members</fullName>
                </value>
                <value>
                    <fullName>EH EU India Petro Sub Region 1 Leader</fullName>
                </value>
                <value>
                    <fullName>EH EU India South Central Sub Region 1 Leader</fullName>
                </value>
                <value>
                    <fullName>EH EU India West Sub Region 1 Leader</fullName>
                </value>
                <value>
                    <fullName>Asturias &amp; Leon</fullName>
                </value>
                <value>
                    <fullName>Galicia &amp; Alejandro</fullName>
                </value>
                <value>
                    <fullName>EH EGB2 Sales Team North</fullName>
                </value>
                <value>
                    <fullName>EH EGB2 Sales Team South</fullName>
                </value>
                <value>
                    <fullName>EIT EH Lombardy Team Chrom</fullName>
                </value>
                <value>
                    <fullName>EIT EH Lombardy Team INORG</fullName>
                </value>
                <value>
                    <fullName>EIT EH Lombardy Team MatChar</fullName>
                </value>
                <value>
                    <fullName>EIT EH North East Team Chrom</fullName>
                </value>
                <value>
                    <fullName>EIT EH North East Team Inorg</fullName>
                </value>
                <value>
                    <fullName>EIT EH North East Team MatChar</fullName>
                </value>
                <value>
                    <fullName>EIT EH North West Team Chrom</fullName>
                </value>
                <value>
                    <fullName>EIT EH North West Team Inorg</fullName>
                </value>
                <value>
                    <fullName>EIT EH North West Team MatChar</fullName>
                </value>
                <value>
                    <fullName>EIT EH South Team Chrom</fullName>
                </value>
                <value>
                    <fullName>EIT EH South Team INORG</fullName>
                </value>
                <value>
                    <fullName>EIT EH South Team MatChar</fullName>
                </value>
                <value>
                    <fullName>EAT2 BIO Reagents Sales Team</fullName>
                </value>
                <value>
                    <fullName>ECH2 BIO Reagents Sales Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Level_11__c</fullName>
        <label>Territory Level 11</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Territory_Level_10__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>EH EU India Petro Sub Region 1 Sales Team</fullName>
                </value>
                <value>
                    <fullName>EH EU India South Central Sub Region 1 Sales Team</fullName>
                </value>
                <value>
                    <fullName>EH EU India West Sub Region 1 Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Won_Revenue_Stretch__c</fullName>
        <formula>Won_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Won Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Target_Achieved__c</fullName>
        <formula>IF(  Won_Revenue__c  = 0, 0, Won_Revenue__c / Base_Target__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Target Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commit_Amount_Stretch__c</fullName>
        <formula>Commit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pipeline_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Pipeline Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecast_Revenue__c</fullName>
        <formula>Won_Revenue__c +  Commit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecast Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stretch_Target_Achieved__c</fullName>
        <formula>IF( Won_Revenue__c = 0, 0, Won_Revenue__c / Stretch_Target__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stretch Target Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Closed Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commit_as_of_Base_Target__c</fullName>
        <formula>IF(( Commit_Amount__c = 0), 0, (Commit_Amount__c / Base_Target__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit as % of Base Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Closed Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Amount_Stretch__c</fullName>
        <formula>Closed_Lost_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Lost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count_Win_Rate__c</fullName>
        <formula>IF(( Closed_Won_Opportunities__c = 0), 0, ( Closed_Won_Opportunities__c / ( Closed_Won_Opportunities__c + Closed_Lost_Opportunities__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Opportunity Count Win Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Base_Target_Variance_Amount__c</fullName>
        <formula>Won_Revenue__c  - Base_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Target Variance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_as_of_Stretch_Target__c</fullName>
        <formula>IF(( Commit_Amount__c = 0), 0, (Commit_Amount__c / Stretch_Target__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit as % of Stretch Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stretch_Target_Variance_Amount__c</fullName>
        <formula>Won_Revenue_Stretch__c  - Stretch_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stretch Target Variance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Forecast_Revenue_Stretch__c</fullName>
        <formula>Total_Forecast_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecast Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Base_Target_Achievement__c</fullName>
        <formula>IF (Total_Forecast_Revenue__c = 0, 0, (  Total_Forecast_Revenue__c  / Base_Target__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Base Target Achievement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecast_Stretch_Target_Achievement__c</fullName>
        <formula>IF (Total_Forecast_Revenue__c = 0, 0, (  Total_Forecast_Revenue__c  / Stretch_Target__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Stretch Target Achievement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>